新增主管用户角色管理功能
